# smaster4s-inis

./: .gitignore  CMakeLists.txt  CODING_STYLE.md  README.md  smaster4s-inis.pc.in
src/: smaster4s-inis.c  smaster4s-inis.h
test/: test.c  test.h
